# testrepo

./: CHANGELOG.md  RELEASE.md  ggfd.txt  pyproject.toml
.github/workflows/: pre-release-pr.yml  releaase.yml  slash-commands.yml
